[tool.poetry]
name = "hw1"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Ivan Krasnopolsky <i1.krasnopolskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
sympy = "^1.13.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
