[project]
name = "lab2"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Ivan Krasnopolsky",email = "i1.krasnopolskiy@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
